 FpgaMemoryHasim.bsv       Locally Added               0 
 BRAM_Bluesim.bsv          Locally Removed           125 
 BRAM1.bsv                 Locally Removed           125 
 BRAM2.bsv                 Locally Removed           125 
 BRAM3.bsv                 Locally Removed           125 

Directory modules/bluespec/common/fpgaenv/fpga-components/hardware
 FpgaMemory.bsv            Locally Added               0 
 BRAM_Verilog.bsv          Locally Removed           125 
 FpgaMemoryHasim.bsv       Locally Added               0 
 hardware-fpga-components.awb Locally Modified          125 
 BRAM_base.bsv             Locally Removed           125 
 BRAM.v                    Locally Removed           125 
 Bram.v                    Locally Added               0 
 BRAM1.bsv                 Locally Removed           125 
 BRAM2.bsv                 Locally Removed           125 
 BRAM3.bsv                 Locally Removed           125 

Added multi read port (initialized or not initialized ) brams


----------
mcadler     Date: Mon Jun 23 00:03:21 EDT 2008  CSN: CSN-platforms-127
                  Mon Jun 23 04:03:21 UTC 2008


Directory modules/bluespec/common/fpgaenv/physical-platform/simulation
 sim-physical-platform.bsv Locally Modified          126 

Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/unix-pipe
 unix-pipe-device.h        Locally Modified          126 
 unix-pipe-device.awb      Locally Modified          126 
 unix-pipe-device.bsv      Locally Modified          126 
 unix-pipe-device-bdpi.c   Locally Modified          126 
 unix-pipe-device.cpp      Locally Modified          126 

When HASIM_NAMED_PIPES environment variable exists the connection for
a hybrid model between software and a simulator (not hardware) goes through
named pipes.  The software does not invoke the simulator.  When the
software-side closes the pipe the communication layer on the HW side
triggers a reset and waits for a new connection.